<resources>
    <string name="app_name">FriendTracker</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_edit_friend">EditFriendActivity</string>
    <string name="title_activity_edit_meeting">EditMeetingActivity</string>
    <string name="title_activity_display_attends">DisplayAttendsListActivity</string>
    <string name="title_activity_map">Map</string>
    <string name="distance_units">km</string>
    <string name="title_user_pref">User Setting</string>
    <string name="pref_notify">Notification</string>
    <string name="pref_title_notify_flag">Meeting notification</string>
    <string name="pref_summary_notify_flag">Display reminders for upcoming meetings</string>
    <string name="pref_title_meeting_notify_time_limit">Meeting notification time</string>
    <string name="pref_summary_meeting_notify_time_limit">Display notification __ minutes before meeting</string>
    <string name="pref_title_meeting_notify_snooze_time_limit">Snooze time</string>
    <string name="pref_summary_meeting_notify_snooze_time_limit">Snooze notification __ minutes</string>
    <string name="text_btnSuggestion">Suggest Now</string>
    <string name="text_btnAcs">Ascending</string>
    <string name="text_btnDecs">Descending</string>
    <string name="text_btnAccept">Accept</string>
    <string name="text_btnIgnore">Ignore</string>
    <string name="text_title">Title :</string>
    <string name="text_location">Location:</string>
    <string name="text_attend">Attendees:</string>
    <string name="text_start_date">Start Date :</string>
    <string name="pref_summary_suggestion_flag">Suggest meetings with the nearest friend?</string>
    <string name="pref_title_suggestion_flag">Meeting Suggestion</string>
    <string name="pref_summary_meeting_suggestion_time_limit">Set default value: 30 secs</string>
    <string name="pref_title_meeting_suggestion_time_limit">Suggestion frequency</string>
    <string name="text_current_location">Current Location</string>
    <string name="meeting_suggestion">Meeting Suggestion</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="meeting_start">Meeting Start</string>
    <string name="meeting_end">Meeting End</string>
    <string name="add_extra_attendees">Add extra attendees:</string>
    <string name="attendee_list">Attendee list:</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="friends_invited">Friends Invited:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="distance">Distance</string>
    <string name="walk_time">Walk Time</string>
    <string name="add_friend_from_contacts">Add Friend From Contacts</string>
    <string name="add_attendees_from_friends">Add Attendees From Friends</string>
</resources>
