<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.loso.friendtracker.View.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnAcs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text_btnAcs" />

        <Button
            android:id="@+id/btnDecs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text_btnDecs" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSuggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btnSuggestion" />

    <ListView
        android:id="@+id/meetinglist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>
